--- a/README
+++ b/README
@@ -2,4 +2,5 @@ Collection of scripts that I find enhance my Command Line Experience (r)
 
  json2csv.py:		Extract keys from newline seperated JSON dictionaries to CSV output
  senderscore.sh:	Log to CSV the SMTP sender scores for blocks of IPs
+ subtract.py:		Subtracts patterns in file from a STDIN. Each pattern should be on a line of it's own
 
