--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Collection of scripts that I find enhance my Command Line Experience (r)
 
- json2csv.py:		Extract keys from newline seperated JSON dictionaries to CSV output
- senderscore.sh:	Log to CSV the SMTP sender scores for blocks of IPs
- subtract.sh:		Subtracts patterns in file from a file (alias for grep basically)
+ extract_invalid_emails.py	Given a file as an argument or STDIN, print only bad email addresses
+ json2csv.py:				Extract keys from newline seperated JSON dictionaries to CSV output
+ senderscore.sh:			Log to CSV the SMTP sender scores for blocks of IPs
+ subtract.sh:				Subtracts patterns in file from a file (alias for grep basically)
 
